--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
-            { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
-            { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "Micro Economics", grade: "C", semester: "Fall 2025", relevance: "Code" },
+            { name: "Political Science", grade: "A", semester: "Fall 2025", relevance: "Design" },
+            { name: "Business Information Systems", grade: "A", semester: "Fall 2025", relevance: "Foundational" },
+            { name: "History West in the World", grade: "A", semester: "Fall 2025", relevance: "Code" },
+            { name: "Personal Nutrition", grade: "A", semester: "Fall 2025", relevance: "Code" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -576,4 +576,5 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
