--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Micro Economics", grade: "C", semester: "Fall 2025", relevance: "Code" },
-            { name: "Political Science", grade: "A", semester: "Fall 2025", relevance: "Design" },
-            { name: "Business Information Systems", grade: "A", semester: "Fall 2025", relevance: "Foundational" },
-            { name: "History West in the World", grade: "A", semester: "Fall 2025", relevance: "Code" },
-            { name: "Personal Nutrition", grade: "A", semester: "Fall 2025", relevance: "Code" },
+            { name: "Micro Economics", grade: "C", semester: "Fall 2025", relevance: "Economics" },
+            { name: "Political Science", grade: "A", semester: "Fall 2025", relevance: "Government" },
+            { name: "Business Information Systems", grade: "A", semester: "Fall 2025", relevance: "Code" },
+            { name: "History West in the World", grade: "A", semester: "Fall 2025", relevance: "History" },
+            { name: "Personal Nutrition", grade: "A", semester: "Fall 2025", relevance: "Science" },
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -576,5 +576,6 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
