--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.1 PROFILE & BRANDING VARIABLES (REQUIRED)
         const profileData = {
             studentName: "Rae David",
-            tagline: "Future-Focused Problem Solver in Digital Media",
+            tagline: "Always look for the positives in life.",
             currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
             major: "Finance",
             gpa: 3.67,
@@ -289,40 +289,40 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
-                link: "https://github.com/riley/charity-site"
-            },
-            {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
+                title: "Second Harvest",
+                category: "Community Service",
+                challenge: "Help as many people as possible during these hard times and the government shut-down.",
+                solution: "Pack baskets and boxes of food, toiletries, cleaning supplies, and other needs.",
+                result: "Helped peoples days get brighter and smiles get bigger.",
                 link: ""
             },
             {
-                title: "3D Planet Rendering",
-                category: "Code/Personal",
-                challenge: "A personal challenge to learn a new visualization library (three.js) over winter break.",
-                solution: "Created a simple animated model of a rotating planet using three.js, demonstrating coordinate system mastery.",
-                result: "Successfully rendered complex geometry and optimized the animation loop to maintain **60 FPS** on desktop browsers.",
-                link: "https://riley.github.io/planet-render"
+                title: "Red Dress Gala",
+                category: "Philanthropy Work for Sorority",
+                challenge: "Raise money for Women's Heart Health",
+                solution: "Getting donations and goods from local businesses.",
+                result: "Raised money and goods in order to donate to those in need.",
+                link: ""
+            },
+            {
+                title: "",
+                category: "",
+                challenge: "",
+                solution: "",
+                result: "",
+                link: ""
             }
         ];
 
         // 1.4 EXPERIENCE & AWARDS (REQUIRED)
         const recognitionData = {
             experience: [
-                { title: "Team Lead, Ball State Hackathon", type: "Extracurricular", duration: "Oct 2025", detail: "Led a four-person team to develop a functional prototype in **24 hours**." },
-                { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
+                { title: , type: , duration: , detail: " },
+                { title: , type: , duration: , detail: " },
             ],
             awards: [
-                { title: "Dean's List", duration: "Fall 2024", detail: "Achieved a **3.8 GPA**." },
-                { title: "Rising Star Freshman Award", duration: "Spring 2025", detail: "Recognized by the CS department for high academic achievement and engagement." },
+                { title: , duration: , detail:  },
+                { title: , duration: , detail:  },
             ]
         };
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
